--- a/app/src/main/res/layout/live_stream_page.xml
+++ b/app/src/main/res/layout/live_stream_page.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LiveViewPage">
+    tools:context=".LiveViewPage"
+    android:background="@drawable/gradient">
 
 
     <WebView
