Revert "Updated guest pages."
This reverts commit 7334bb5f675f395b52bc08db34b6a456c74b7322.

--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LoginPageTitle"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/gradient">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/LoginPageText"
@@ -15,7 +14,6 @@
         android:textAlignment="center"
         android:textSize="36sp"
         android:textStyle="bold"
-        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -40,9 +38,7 @@
         android:layout_height="62dp"
         android:ems="10"
         android:hint="@string/EmailInputHint"
-        android:textColor="@color/white"
         android:inputType="textEmailAddress"
-        android:textColorHint="#939393"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
@@ -59,8 +55,6 @@
         android:hint="@string/PasswordInputHint"
         android:importantForAutofill="no"
         android:inputType="textPassword"
-        android:textColorHint="#939393"
-        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.539"
@@ -74,7 +68,6 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:text="@string/forgot_password_text"
-        android:textColor="#A9A9A9"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
