--- a/app/src/main/res/layout/settings_page.xml
+++ b/app/src/main/res/layout/settings_page.xml
@@ -4,40 +4,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/gradient">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-        ...
-
-    </LinearLayout>
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.998"
-        app:menu="@menu/bottom_navigation_menu" />
+    android:layout_height="match_parent">
 
     <Button
         android:id="@+id/backFromSettingsToHome"
-        android:layout_width="173dp"
-        android:layout_height="51dp"
+        android:layout_width="178dp"
+        android:layout_height="64dp"
         android:text="@string/BackButtonText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.932"
+        app:layout_constraintHorizontal_bias="0.527"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.679" />
+        app:layout_constraintVertical_bias="0.941" />
 
     <ToggleButton
         android:id="@+id/notificationToggleButton"
@@ -54,7 +33,6 @@
     <TextView
         android:id="@+id/notificationSettingsText"
         android:layout_width="158dp"
-        android:textColor="@color/white"
         android:layout_height="46dp"
         android:text="@string/send_notifications_TEXT"
         android:textAlignment="center"
@@ -70,7 +48,6 @@
         android:id="@+id/PictureCaptureText"
         android:layout_width="158dp"
         android:layout_height="46dp"
-        android:textColor="@color/white"
         android:text="@string/picture_capture_text"
         android:textAlignment="center"
         android:textSize="18sp"
@@ -95,37 +72,36 @@
 
     <Button
         android:id="@+id/ChangeEmailButton"
-        android:layout_width="173dp"
+        android:layout_width="176dp"
         android:layout_height="51dp"
         android:text="@string/change_email_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.067"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.554" />
+        app:layout_constraintVertical_bias="0.568" />
 
     <Button
         android:id="@+id/adminChangePasswordButton"
         android:layout_width="173dp"
-        android:layout_height="51dp"
-        android:text="Change Password"
+        android:layout_height="58dp"
+        android:text="@string/change_password_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.932"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.554" />
+        app:layout_constraintVertical_bias="0.688" />
 
     <Button
         android:id="@+id/adminHelpPageButton"
-        android:layout_width="173dp"
-        android:layout_height="51dp"
+        android:layout_width="168dp"
+        android:layout_height="52dp"
         android:text="@string/help_page_button_Text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.067"
+        app:layout_constraintHorizontal_bias="0.514"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.68" />
+        app:layout_constraintVertical_bias="0.813" />
 </androidx.constraintlayout.widget.ConstraintLayout>
