--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LoginPageTitle"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/gradient">
 
     <TextView
+        android:textColor="@color/white"
         android:id="@+id/LoginPageText"
         android:layout_width="260dp"
         android:layout_height="65dp"
@@ -30,13 +32,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.76" />
+        app:layout_constraintVertical_bias="0.76"
+        />
 
     <EditText
         android:id="@+id/userEmailInput"
         android:layout_width="242dp"
         android:layout_height="62dp"
         android:ems="10"
+        android:textColorHint="#A9A9A9"
+        android:textColor="@color/white"
         android:hint="@string/EmailInputHint"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -53,6 +58,8 @@
         android:layout_height="57dp"
         android:ems="10"
         android:hint="@string/PasswordInputHint"
+        android:textColorHint="#A9A9A9"
+        android:textColor="@color/white"
         android:importantForAutofill="no"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -70,6 +77,7 @@
         android:text="@string/forgot_password_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="#A9A9A9"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LogInButton"
