--- a/app/src/main/res/layout/admin_help_page.xml
+++ b/app/src/main/res/layout/admin_help_page.xml
@@ -4,14 +4,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/gradient">
 
     <TextView
         android:id="@+id/helpPageTitle"
         android:layout_width="209dp"
         android:layout_height="41dp"
-        android:text="@string/help_page_title_Text"
+        android:text="Help Page"
         android:textAlignment="center"
+        android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,8 +27,9 @@
         android:id="@+id/helpPageConnectionStatusLabel"
         android:layout_width="143dp"
         android:layout_height="52dp"
-        android:text="@string/connection_status_label_text"
+        android:text="Connection Status"
         android:textAlignment="center"
+        android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,6 +42,7 @@
         android:id="@+id/helpPageCurrentConnectionStatus"
         android:layout_width="143dp"
         android:layout_height="52dp"
+        android:textColor="@color/teal_200"
         android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -81,6 +85,7 @@
                 android:id="@+id/generalHelpTextP1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:textColor="@color/white"
                 android:text="@string/generalhelpText_p1"
                 android:textAlignment="center"
                 android:textSize="18sp" />
@@ -96,12 +101,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/generalhelpText_p2"
+                android:textColor="@color/white"
                 android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/generalHelpTextP3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
                 android:text="@string/generalhelpText_p3"
                 android:textSize="18sp" />
 
@@ -115,6 +122,7 @@
                 android:id="@+id/generalHelpTextP4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
                 android:text="@string/generalhelpText_p4"
                 android:textSize="18sp" />
 
@@ -128,6 +136,7 @@
                 android:id="@+id/generalHelpTextP5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
                 android:text="@string/generalhelpText_p5"
                 android:textSize="18sp" />
 
@@ -141,6 +150,7 @@
                 android:id="@+id/generalHelpTextP6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
                 android:text="@string/generalhelpText_p6"
                 android:textSize="18sp" />
 
@@ -148,6 +158,7 @@
                 android:id="@+id/generalHelpTextP7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
                 android:text="@string/generalhelpText_p7"
                 android:textSize="18sp" />
 
