--- a/app/src/main/res/layout/admin_info_page.xml
+++ b/app/src/main/res/layout/admin_info_page.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/gradient">
 
     <TextView
         android:id="@+id/textView2"
@@ -12,6 +13,7 @@
         android:layout_height="53dp"
         android:text="@string/admin_info_page_title"
         android:textAlignment="center"
+        android:textColor="@color/white"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,6 +24,7 @@
     <TextView
         android:id="@+id/admin_ID_Label"
         android:layout_width="111dp"
+        android:textColor="@color/white"
         android:layout_height="48dp"
         android:clickable="false"
         android:text="@string/admin_id_label_text"
@@ -37,6 +40,7 @@
     <TextView
         android:id="@+id/AdminID"
         android:layout_width="368dp"
+        android:textColor="@color/white"
         android:layout_height="56dp"
         android:textAlignment="center"
         android:textIsSelectable="true"
@@ -52,6 +56,7 @@
         android:id="@+id/textView5"
         android:layout_width="118dp"
         android:layout_height="49dp"
+        android:textColor="@color/white"
         android:text="@string/hostname_label"
         android:textAlignment="center"
         android:textSize="24sp"
@@ -66,6 +71,7 @@
         android:id="@+id/PiBellHostname"
         android:layout_width="377dp"
         android:layout_height="59dp"
+        android:textColor="@color/white"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
