--- a/app/src/main/res/layout/guest_notification_page.xml
+++ b/app/src/main/res/layout/guest_notification_page.xml
@@ -4,16 +4,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/gradient">
 
 
     <TextView
         android:id="@+id/GuestNotificationPageTitle"
-        android:layout_width="186dp"
-        android:layout_height="35dp"
-        android:text="@string/notifications_page_title_text"
+        android:layout_width="190dp"
+        android:layout_height="47dp"
+        android:text="Notifications"
         android:textAlignment="center"
-        android:textSize="24sp"
+        android:textColor="@color/white"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,7 +23,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.025" />
-
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/GuestNotifsPageBackButton"
