--- a/app/src/main/res/layout/guest_sign_up_page.xml
+++ b/app/src/main/res/layout/guest_sign_up_page.xml
@@ -4,13 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/gradient">
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="376dp"
         android:layout_height="62dp"
         android:text="@string/pibell_guest_sign_up_page_title"
+        android:textColor="@color/white"
         android:textAlignment="center"
         android:textSize="36sp"
         android:textStyle="bold"
@@ -25,6 +27,8 @@
         android:id="@+id/guestSignUpNameInput"
         android:layout_width="337dp"
         android:layout_height="61dp"
+        android:textColor="@color/white"
+        android:textColorHint="#939393"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/name_sign_up_page_hint"
@@ -39,8 +43,10 @@
         android:id="@+id/guestEmailSignUpPage"
         android:layout_width="337dp"
         android:layout_height="61dp"
+        android:textColor="@color/white"
         android:ems="10"
         android:hint="@string/email_address_sign_up_page_hint"
+        android:textColorHint="#939393"
         android:importantForAutofill="no"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -56,6 +62,8 @@
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/password_sign_up_page_hint"
+        android:textColorHint="#939393"
+        android:textColor="@color/white"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,9 +79,11 @@
         android:ems="10"
         android:hint="@string/rpi_device_hostname_signup_page_hint"
         android:importantForAutofill="no"
+        android:textColorHint="#939393"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.688" />
@@ -84,7 +94,9 @@
         android:layout_height="61dp"
         android:ems="10"
         android:hint="@string/admin_id_hint"
+        android:textColorHint="#939393"
         android:inputType="textPersonName"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
